skeleton2/subc.output
Terminals unused in grammar

   STRUCTOP
   STRUCT


Rules useless in parser due to conflicts

    5 ext_def: %empty


State 2 conflicts: 1 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: ext_def_list

    2 ext_def_list: ext_def_list ext_def
    3             | %empty

    4 ext_def: TYPE def ';'
    5        | %empty

    6 def: def ',' def
    7    | unary

    8 unary: INTEGER_CONST
    9      | CHAR_CONST
   10      | STRING
   11      | ID


Terminals, with rules where they appear

$end (0) 0
',' (44) 6
';' (59) 4
error (256)
STRUCTOP (258)
TYPE (259) 4
STRUCT (260)
ID (261) 11
CHAR_CONST (262) 9
STRING (263) 10
INTEGER_CONST (264) 8


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
program (13)
    on left: 1, on right: 0
ext_def_list (14)
    on left: 2 3, on right: 1 2
ext_def (15)
    on left: 4 5, on right: 2
def (16)
    on left: 6 7, on right: 4 6
unary (17)
    on left: 8 9 10 11, on right: 7


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (ext_def_list)

    program       go to state 1
    ext_def_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: ext_def_list .
    2 ext_def_list: ext_def_list . ext_def

    TYPE  shift, and go to state 4

    $end      reduce using rule 1 (program)
    $end      [reduce using rule 5 (ext_def)]
    TYPE      [reduce using rule 5 (ext_def)]
    $default  reduce using rule 1 (program)

    ext_def  go to state 5


State 3

    0 $accept: program $end .

    $default  accept


State 4

    4 ext_def: TYPE . def ';'

    ID             shift, and go to state 6
    CHAR_CONST     shift, and go to state 7
    STRING         shift, and go to state 8
    INTEGER_CONST  shift, and go to state 9

    def    go to state 10
    unary  go to state 11


State 5

    2 ext_def_list: ext_def_list ext_def .

    $default  reduce using rule 2 (ext_def_list)


State 6

   11 unary: ID .

    $default  reduce using rule 11 (unary)


State 7

    9 unary: CHAR_CONST .

    $default  reduce using rule 9 (unary)


State 8

   10 unary: STRING .

    $default  reduce using rule 10 (unary)


State 9

    8 unary: INTEGER_CONST .

    $default  reduce using rule 8 (unary)


State 10

    4 ext_def: TYPE def . ';'
    6 def: def . ',' def

    ','  shift, and go to state 12
    ';'  shift, and go to state 13


State 11

    7 def: unary .

    $default  reduce using rule 7 (def)


State 12

    6 def: def ',' . def

    ID             shift, and go to state 6
    CHAR_CONST     shift, and go to state 7
    STRING         shift, and go to state 8
    INTEGER_CONST  shift, and go to state 9

    def    go to state 14
    unary  go to state 11


State 13

    4 ext_def: TYPE def ';' .

    $default  reduce using rule 4 (ext_def)


State 14

    6 def: def . ',' def
    6    | def ',' def .

    $default  reduce using rule 6 (def)
